# fts5_mecab

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile.alpine  README.md  build.sh  fts5_mecab.c
.github/workflows/: main.yml
